# did-indy-py

./: .gitignore  .pdm-python  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Dockerfile.release  README.md  pyproject.toml
.github/actions/unit-tests/: action.yml
.github/workflows/: docker-publish.yml  publish.yml  ruff.yml  tests.yml  ty.yml  typecheck.yml
demo/: demo.ledgers.toml  docker-compose.yml  main.py
scripts/: dev  provision
src/did_indy/: __init__.py  anoncreds.py  config.py  did.py  ledger.py  resolver.py  signer.py  utils.py
src/did_indy/author/: author.py  base.py  lite.py  resolver_lite.py
src/did_indy/client/: client.py
src/did_indy/driver/: app.py  auto_endorse.py  config.py  depends.py  ledgers.py  provision.py  security.py  taa.py
src/did_indy/driver/api/: clients.py  namespaces.py  resolver.py  txns.py
src/did_indy/models/: anoncreds.py  endorsement.py  taa.py  txn.py
src/did_indy/models/txn/: __init__.py  data.py  deref.py  operation.py  result.py
src/did_indy_client/: __init__.py  client.py  http.py  http_client.py  models.py
src/driver_did_indy/: anoncreds.py  app.py  cache.py  config.py  depends.py  ledgers.py  namespaces.py  provision.py  security.py  txns.py  utils.py  webhooks.py
src/driver_did_indy/api/: clients.py  models.py  namespaces.py  resolver.py  txns.py
src/driver_did_indy/models/: anoncreds.py  taa.py  txn.py
tests/: test_cache.py
tests/e2e/: README.md  conftest.py
tests/integration/: conftest.py  test_noop.py
tests/unit/: conftest.py  test_did.py
tests/unit/test_txns/: __init__.py  test_models.py
tests/unit/test_txns/data/responses/: cred_def.py  nym.py  rev_reg_def.py  rev_reg_entry.py  schema.py
