[project]
name = "driver-did-indy"
version = "0.1.0"
description = "did:indy driver implementing the DID Registration Interface"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "httpx>=0.27.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
driver = [
    "fastapi[standard]>=0.115.4",
    "aries-askar>=0.3.2",
    "indy-vdr>=0.4.2",
    "pydantic>=2.9.2",
    "base58>=2.1.1",
    "pydantic-settings>=2.6.1",
    "rich>=13.9.4",
    "pyjwt>=2.10.1",
]
demo = [
    "anoncreds>=0.2.0",
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.7.2",
    "pre-commit>=4.0.1",
]

[tool.pdm.scripts]
provision = {call = "driver_did_indy.provision:main"}
dev = "fastapi dev src/driver_did_indy/app.py --host 0.0.0.0 --port 80"

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = true

