[project]
name = "did-indy-py"
version = "0.1.0"
description = "did:indy library including a driver implementing the DID Registration Interface"
authors = [
    {name = "Daniel Bluhm", email = "dbluhm@pm.me"},
]
dependencies = [
    "httpx>=0.27.2",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "Apache-2.0"}

[project.optional-dependencies]
driver = [
    "fastapi[standard]>=0.115.4",
    "aries-askar>=0.3.2",
    "indy-vdr>=0.4.2",
    "pydantic>=2.9.2",
    "base58>=2.1.1",
    "pydantic-settings>=2.6.1",
    "rich>=13.9.4",
    "pyjwt>=2.10.1",
]
client = [
    "pydantic>=2.9.2",
]
demo = [
    "anoncreds>=0.2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.12.0",
    "pre-commit>=4.0.1",
]

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "did_indy"
